[gd_scene load_steps=41 format=2]

[ext_resource path="res://Assets/Player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://elements/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/light.png" type="Texture" id=4]
[ext_resource path="res://MusicAndSounds/405538__nebulasnails__pistol-cock.ogg" type="AudioStream" id=5]
[ext_resource path="res://MusicAndSounds/427598__michorvath__ar15-pistol-shot.mp3" type="AudioStream" id=6]
[ext_resource path="res://MusicAndSounds/377145__nioczkus__pistol-draw-unholster.ogg" type="AudioStream" id=7]
[ext_resource path="res://MusicAndSounds/ugh.ogg" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=11]
radius = 12.1655

[sub_resource type="Animation" id=12]
resource_name = "Idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:texture_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[sub_resource type="Animation" id=21]
resource_name = "gunIdle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "gun_ready"
} ]
}

[sub_resource type="Animation" id=17]
resource_name = "gunIn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 19, 18, 17 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=18]
resource_name = "gunOut"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=19]
resource_name = "gunShot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.5,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0.1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Light2D:energy")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Light2D:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.964706, 0.968627, 0.647059, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Light2D:texture_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.5, 0.7, 0.5 ]
}

[sub_resource type="Animation" id=20]
resource_name = "gunWalk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "gun_ready"
} ]
}

[sub_resource type="Animation" id=14]
resource_name = "walking"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "gunIdle"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "gunIn"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "gunOut"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "gunShot"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "gunWalk"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=41]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachine" id=15]
states/Idle/node = SubResource( 7 )
states/Idle/position = Vector2( 454, 108 )
states/gunIdle/node = SubResource( 22 )
states/gunIdle/position = Vector2( 420, 307 )
states/gunIn/node = SubResource( 23 )
states/gunIn/position = Vector2( 537, 212 )
states/gunOut/node = SubResource( 24 )
states/gunOut/position = Vector2( 347, 212 )
states/gunShot/node = SubResource( 25 )
states/gunShot/position = Vector2( 703, 326 )
states/gunWalk/node = SubResource( 26 )
states/gunWalk/position = Vector2( 537, 429 )
states/walking/node = SubResource( 8 )
states/walking/position = Vector2( 679, 108 )
transitions = [ "Idle", "walking", SubResource( 9 ), "walking", "Idle", SubResource( 10 ), "Idle", "gunOut", SubResource( 27 ), "gunIdle", "gunWalk", SubResource( 31 ), "gunWalk", "gunIn", SubResource( 32 ), "gunWalk", "gunShot", SubResource( 33 ), "gunIdle", "gunShot", SubResource( 34 ), "gunOut", "gunIdle", SubResource( 37 ), "gunIdle", "gunIn", SubResource( 38 ), "gunIn", "Idle", SubResource( 39 ), "gunShot", "gunWalk", SubResource( 40 ), "gunShot", "gunIdle", SubResource( 41 ), "gunWalk", "gunIdle", SubResource( 42 ) ]
graph_offset = Vector2( 58, 244 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[sub_resource type="CircleShape2D" id=43]
radius = 17.1172

[node name="Player" type="RigidBody2D"]
collision_layer = 2
collision_mask = 113
script = ExtResource( 2 )

[node name="Shadow" type="Light2D" parent="."]
light_mask = 0
texture = ExtResource( 4 )
texture_scale = 0.04
energy = 0.7
mode = 1
range_item_cull_mask = 2
shadow_enabled = true
shadow_gradient_length = 2.0
shadow_filter_smooth = 50.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 4

[node name="bullet_spawn" type="Position2D" parent="Sprite"]
position = Vector2( 23, 0 )

[node name="bodyShape" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 12 )
anims/RESET = SubResource( 13 )
anims/gunIdle = SubResource( 21 )
anims/gunIn = SubResource( 17 )
anims/gunOut = SubResource( 18 )
anims/gunShot = SubResource( 19 )
anims/gunWalk = SubResource( 20 )
anims/walking = SubResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 16 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 43 )

[node name="Timer" parent="Hurtbox" index="1"]
one_shot = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="HitSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 0.5
shadow_enabled = true
shadow_gradient_length = 2.0
shadow_filter_smooth = 50.0

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hurtbox"]
